Fixed error panel alignment issues

--- a/src/lmcc/public/css/left.css
+++ b/src/lmcc/public/css/left.css
@@ -132,37 +132,40 @@
 #inner_mission_panel {
 	display: flex;
 	flex-direction: row;
-	/* justify-content: left; */
+	/* justify-content: center; */
 	
 	/* border: 0.2vh solid rgb(41, 225, 249); */
-	height: 95%;
+	height: 100%;
 	width: 100%;
 
 }
 
 #eva_container {
 	display: flex;
-    justify-content: center;
-    align-items: center; 
-	aspect-ratio: 5 / 1;
-	width: 75%;
-	padding-top: 1%;
-	height: 95%;
+    /* justify-content: center; */
+    /* align-items: center;  */
+	/* aspect-ratio: 5 / 1; */
+	width: 100%;
+	/* padding-top: 1%; */
+	height: 100%;
 	/* left: 0%; */
-	/* border: 0.3vh solid rgb(176, 158, 255); */
+	/* border: 0.1vh solid rgb(176, 158, 255); */
+
 
 }
 
 .eva_panel {
 	position: relative;
-	height: 100%;
+	height: 96%;
 	padding: 1% 1%;
 	background-image: radial-gradient(#737f9d, #5e6394);
 	border: 0.2vh solid #454b8f;
 	width: 100%;
-	display: inline-block; /* Display the panels inline */
 	border-radius: 10px;
 	overflow: scroll;
+	
+	/* border: 0.1vh solid rgb(176, 158, 255); */
+
 }
 
 #eva {
@@ -172,26 +175,28 @@
 
 #error_container {
 	display: flex;
-    justify-content: center;
-    align-items: center; 
-	aspect-ratio: 5 / 1;
-	width: 25%;
-	padding-top: 1%;
+    /* justify-content: center; */
+    /* align-items: center;  */
+	width: 40%;
+	height: 100%;
 	/* left: 0%; */
 	/* border: 0.3vh solid rgb(176, 158, 255); */
+	/* border: 0.1vh solid rgb(176, 158, 255); */
 
 }
 
 .error_panel {
 	position: relative;
-	height: 100%;
+	height: 97%;
 	padding: 1% 1%;
+	padding-top: 2.5%;
 	background-image: radial-gradient(#737f9d, #5e6394);
 	border: 0.2vh solid #454b8f;
 	width: 100%;
-	display: inline-block; /* Display the panels inline */
 	border-radius: 10px;
 	overflow: scroll;
+	
+	/* border: 0.1vh solid rgb(176, 158, 255); */
 }
 
 .green-text {
